--- a/src/sass/blocks/_gallery.sass
+++ b/src/sass/blocks/_gallery.sass
@@ -1,13 +1,41 @@
 .gallery
-    display: flex
-    &__block
-        width: calc( 100% / 3)
-        height: 534px
-        display: flex
-        flex-wrap: wrap
-    &__block_w532
-        
-        img
-            width: 266px
-    &__brooks
-        width: 100%
+	&__images
+		display: flex
+		@media ( max-width: 991px )
+			flex-wrap: wrap
+			justify-content: center
+	&__block
+		width: 508px
+		min-height: 534px
+		@media ( max-width: 1200px )
+			min-height: 407px
+		display: flex
+		flex-wrap: wrap
+	&__bigbrooks
+		width: 100%
+	&__brooks
+		width: calc( 100% / 2 )
+	&__button
+		background-color: #282F35
+		padding: 75px 0
+		text-align: center
+		button
+			width: 300px
+			height: 50px
+			padding: 0
+			border: 2px solid #ffffff
+			background-color: #282F35
+			color: #ffffff
+			font-size: 14px
+			font-weight: 700
+			letter-spacing: 4px
+			@media ( max-width: 575px )
+				width: 250px
+				height: 46px
+				font-size: 12px
+			&:focus
+				outline: none
+			&:hover
+				background-color: #ffffff
+				color: #282F35
+				cursor: pointer
