--- a/src/sass/blocks/_title.sass
+++ b/src/sass/blocks/_title.sass
@@ -20,3 +20,9 @@
 		span
 			font-weight: 300
 			color: $second_color
+	&_messages
+		margin-top: 39px
+		font-style: italic
+		font-size: 24px
+		color: $second_color
+		text-transform: none
