--- a/src/sass/blocks/_messages.sass
+++ b/src/sass/blocks/_messages.sass
@@ -16,6 +16,15 @@
 			border: 1px solid $second_color
 			font-size: 20px
 			font-style: italic
+			@media ( max-width: 991px )
+				width: 350px
+			@media ( max-width: 575px )
+				margin-bottom: 20px
+				margin-right: 0
+				width: 300px
+				height: 50px
+				padding-left: 20px
+				font-size: 18px
 		button
 			width: 127px
 			height: 70px
@@ -26,6 +35,9 @@
 			color: #ffffff
 			text-transform: uppercase
 			border: none
+			@media ( max-width: 575px )
+				width: 110px
+				height: 50px
 			&:focus
 				outline: none
 			&:hover
