add footer and other

--- a/src/sass/blocks/_descr.sass
+++ b/src/sass/blocks/_descr.sass
@@ -11,3 +11,12 @@
 		margin-top: 26px
 		font-size: 16px
 		line-height: 27px
+	&_footer
+		margin-top: 0
+		font-size: 14px
+		font-style: italic
+		text-align: left
+		line-height: 19px
+		@media ( max-width: 991px )
+			text-align: center
+			margin-bottom: 20px
