--- a/src/sass/blocks/_messages.sass
+++ b/src/sass/blocks/_messages.sass
@@ -41,6 +41,5 @@
 			&:focus
 				outline: none
 			&:hover
-				color: #64C29E
-				background-color: #ffffff
+				background-color: #5eac93
 				border: 1px solid #64C29E
