--- a/src/sass/blocks/_title.sass
+++ b/src/sass/blocks/_title.sass
@@ -26,3 +26,10 @@
 		font-size: 24px
 		color: $second_color
 		text-transform: none
+	&_footer
+		margin-top: 0
+		font-size: 16px
+		color: $second_color
+		text-align: left
+		@media ( max-width: 991px )
+			text-align: center
